title not showing error fixed

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Limelight&display=swap');
 
-html,body{
+html{
     height:100%;
     width:100%;
     color: white;
